--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "sportle",
+  "type": "module",
   "version": "1.0.0",
   "description": "A wordle inspired sports trivia game",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jake Koenig",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.0",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "node-fetch": "^3.2.10",
+    "nodemon": "^2.0.19",
+    "pug": "^3.0.2",
+    "random": "^3.0.6",
+    "seedrandom": "^3.0.5"
   }
 }
